--- a/BTHHWebsite/index.html
+++ b/BTHHWebsite/index.html
@@ -25,7 +25,7 @@
 						<img src = "images/Logo.JPG" height = "300" width = "350"> 
 						<h1>BabySafe<br />
 						Health</h1>
-						<p>A Rutgers-based startup focused on tackling America's problem ofinfant mortality</p>
+						<p>A Rutgers-based startup focused on decreasing infant mortality</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -43,12 +43,14 @@
 							<!-- <li><a href="generic.html">Generic Page</a></li> -->
 							<li><a href="elements.html">Our Team</a></li>
 						</ul>
+						<!--
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
+						-->
 					</nav>
 
 				<!-- Main -->
@@ -65,9 +67,6 @@
 									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/HackathonWin.JPG" height='400' width='40' alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
 							</article>
 
 						<!-- Posts -->
@@ -110,41 +109,28 @@
 										and we are aiming to provide a <b><u>systematic solution</u></b>. Our app would <b><u>empower</u></b> mothers so they can be 
 										fully aware of their own healthcare needs and demand for catered treatment to prevent adverse health effects during the pregnancy and beyond. 
 									</p>
+								</article>	
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Our Prototype<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<a href="#" class="image fit"><img src="images/LoggedOut.JPG" width = 50 height = 850 alt="" /></a>
+									<p></p>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">The Input<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<a href="#" class="image fit"><img src="images/TheInput.JPG" alt="" /></a>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">The Output<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<a href="#" class="image fit"><img src="images/TheOutput.JPG" alt="" /></a>
 								</article>
 							</section>
 
@@ -152,16 +138,10 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									
 								</div>
-							</footer>
+							</footer> 
+						
 
 					</div>
 
@@ -191,25 +171,26 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Rutgers University<br />
+								New Brunswick, NJ</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(862)-621-5396</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">max.handler@rutgers.edu</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<!-- <h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
+							-->
 							</section>
 						</section>
 					</footer>
