--- a/BTHHWebsite/index.html
+++ b/BTHHWebsite/index.html
@@ -41,7 +41,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Our Mission</a></li>
 							<!-- <li><a href="generic.html">Generic Page</a></li> -->
-							<!--<li><a href="elements.html">Our Team</a></li> -->
+							<!-- <li><a href="elements.html">Our Team</a></li> -->
 						</ul>
 						<!--
 						<ul class="icons">
@@ -74,11 +74,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Infant Mortality</a></h2>
+										<h2 class="align-center"><a href="#">Infant Mortality</a></h2>
 									</header>
 									<!-- <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> --> 
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p> -->
-									<ul>
+									<ul class="align-center">
 										<li>In the United States, for every white infant that dies, 2 black infants die</li>
 										<li>In New Jersey, where we plan to launch the app, 5 black infants die for every white infant</li>
 										<li>This disparity is a result of black and brown communities’ lack of access to accurate information as well as their frequent mistreatment in a hospital / doctor setting</li>
@@ -99,7 +99,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Company Mission<br /></a></h2>
+										<h2 class="align-center"><a href="#">Company Mission<br /></a></h2>
 									</header>
 									<!--<a href="#" class="image fit"><img src="images/CompanyMission.JPG" height = 300 width = 100 alt="" /></a> -->
 									<p>Our goal is to develop an application that uses a <b><u>machine-learning</u></b> algorithm to analyze
@@ -113,38 +113,55 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Our Prototype<br /></a></h2>
+										<h2 class="align-center"><a href="#">Our Prototype<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/LoggedOut.JPG" width = 50 height = 850 alt="" /></a>
+									<element id="main">
+										<element class="posts">
+											<article>
+												<a href="#" class="image"><img src="images/LoggedOut.JPG" width=280 height=500 alt=""/></a>
+											</article>	
+										</element>
+									</element>
 									<p></p>
 								</article>
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">The Input<br /></a></h2>
+										<h2 class="align-center"><a href="#">The Input<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/TheInput.JPG" alt="" /></a>
+									<element id="main">
+										<element class="posts">
+											<article>
+												<a href="#" class="image"><img src="images/TheInput.JPG" width=280 height=500 alt=""/></a>
+											</article>	
+										</element>
+									</element>
 								</article>
+								
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">The Output<br /></a></h2>
+										<h2 class="align-center"><a href="#">The Output<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/TheOutput.JPG" alt="" /></a>
-								</article>
+									<element id="main">
+										<element class="posts">
+											<article>
+												<a href="#" class="image"><img src="images/TheOutput.JPG" width=280 height=500 alt=""/></a>
+											</article>	
+										</element>
+									</element>		
+							</article>
 							</section>
 
-							<article class="post featured">
+							<article class="post featured" text-align="left">
 								<header class="major">
 									<h2><a href="#">Next Steps...</a></h2>
 								</header>
-								<ul>
+								<ul class="align-left">
 									<li>We are competing in the Rutgers i-Corps, a research program funded by the national science foundation</li>
 									<li>For the competition, we will conduct 25 interviews with patients, doctors, and industry professionals in order to confirm the demand for our innovation</li>
 									<li>We will partner with Dr. Natalie Roche of Obstetrics & Gynecology of Rutgers Health in Newark</li>
-									<ol style="list-style-type: lower-alpha; padding-bottom: 0;">
-										<li style="margin-left:2em">Our app will be a part of her newest project: The Birth Equity Plan</li>
-									</ol>
+									<li>Our app will be a part of her newest project: The Birth Equity Plan</li>
 									<li>We plan to launch software development in June 2021, after i-Corps concludes</li>
 								</ul>
 							</article>
@@ -205,10 +222,11 @@
 					</footer>
 
 				<!-- Copyright -->
+					<!--
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
+				-->
 			</div>
 
 		<!-- Scripts -->
